<resources>
    <string name="app_name">FYP</string>
    <string name="findMatch">Find Match</string>
    <string name="matchHistory">Match History</string>
    <string name="videos">Videos</string>
    <string name="topPlayers">Top Players</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_nav_bar">BottomNavBar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="vs"><u>VS</u></string>
    <string name="select">Select</string>
    <string name="next">Next</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth DD/MM/YYYY</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="smash_shot">Smash Shot</string>
    <string name="drop_shot">Drop Shot</string>
    <string name="front_hand">Front Hand</string>
    <string name="service">Service</string>
    <string name="back_hand">Back Hand</string>
    <string name="description_will_update_according_to_rating_bar_value">Description will update according to rating bar value</string>
    <string name="save">SAVE</string>
    <string name="usericon">userIcon</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="phoneicon">phoneIcon</string>
    <string name="dateicon">dateIcon</string>
    <string name="bio">Bio</string>

</resources>
