<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/black"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <RatingBar
        android:id="@+id/ratingSmashShot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:numStars="5"
        android:rating="1"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerBelowFrontHand" />

    <RatingBar
        android:id="@+id/ratingDropShot"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginEnd="-0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="-0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:numStars="5"
        android:rating="1"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerBelowSmashShot" />

    <RatingBar
        android:id="@+id/ratingFrontHand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:numStars="5"
        android:rating="1"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBackHand" />

    <TextView
        android:id="@+id/tvSmashShot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/smash_shot"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/ratingSmashShot"
        app:layout_constraintEnd_toEndOf="@+id/ratingSmashShot"
        app:layout_constraintStart_toStartOf="@+id/ratingSmashShot"
        app:layout_constraintTop_toTopOf="@+id/ratingSmashShot" />

    <TextView
        android:id="@+id/tvDropShot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/drop_shot"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/ratingDropShot"
        app:layout_constraintEnd_toEndOf="@+id/ratingDropShot"
        app:layout_constraintStart_toStartOf="@+id/ratingDropShot"
        app:layout_constraintTop_toTopOf="@+id/ratingDropShot" />

    <TextView
        android:id="@+id/tvFrontHand2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/front_hand"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/ratingFrontHand"
        app:layout_constraintEnd_toEndOf="@+id/ratingFrontHand"
        app:layout_constraintStart_toStartOf="@+id/ratingFrontHand"
        app:layout_constraintTop_toTopOf="@+id/ratingFrontHand" />

    <TextView
        android:id="@+id/tvService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/service"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/ratingService"
        app:layout_constraintEnd_toEndOf="@+id/ratingService"
        app:layout_constraintStart_toStartOf="@+id/ratingService"
        app:layout_constraintTop_toTopOf="@+id/ratingService" />

    <RatingBar
        android:id="@+id/ratingService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:numStars="5"
        android:rating="1"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBackHand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/back_hand"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/ratingBackHand"
        app:layout_constraintEnd_toEndOf="@+id/ratingBackHand"
        app:layout_constraintStart_toStartOf="@+id/ratingBackHand"
        app:layout_constraintTop_toTopOf="@+id/ratingBackHand" />

    <RatingBar
        android:id="@+id/ratingBackHand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-0dp"
        android:layout_marginRight="-0dp"
        android:layout_marginTop="16dp"
        android:numStars="5"
        android:rating="1"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerService" />

    <TextView
        android:id="@+id/tvSkillDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/description_will_update_according_to_rating_bar_value"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingFootWork" />

    <View
        android:id="@+id/dividerBelowBackHand"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBackHand" />

    <View
        android:id="@+id/dividerService"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingService" />

    <View
        android:id="@+id/dividerBelowFrontHand"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingFrontHand" />

    <View
        android:id="@+id/dividerBelowSmashShot"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingSmashShot" />

    <View
        android:id="@+id/dividerBelowDropShot"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingDropShot" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Foot Work"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/ratingFootWork"
        app:layout_constraintEnd_toEndOf="@+id/ratingFootWork"
        app:layout_constraintStart_toStartOf="@+id/ratingFootWork"
        app:layout_constraintTop_toTopOf="@+id/ratingFootWork" />

    <RatingBar
        android:id="@+id/ratingFootWork"

        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:numStars="5"
        android:rating="1"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingDropShot" />


</android.support.constraint.ConstraintLayout>
